    - frobenius_number(...)           Frobenius number of a set
    - vecmex(...)                     least non-negative value not in list
    - vecpmex(...)                    least positive value not in list
    - vecuniq(...)                    remove duplicates from list of integers
    - vecfreq(...)                    return hash of item => count from list
    - vecsort(@L)                     numerically sort integer list
    - vecsorti(\@L)                   in-place numeric sort a list ref
    - vecsample(k,@list)              return k random elements of list
    - toset(\@A)                      convert to unique sorted integer list
    - setinsert(\@A,$v)               insert integer v into integer set A
    - setinsert(\@A,\@B)              insert list B into integer set A
    - setremove(\@A,$v)               remove integer v from integer set A
    - setremove(\@A,\@B)              remove list B values from integer set A
    - setinvert(\@A,$v)               if v is in set A, remove, otherwise add
    - setinvert(\@A,\@B)              invert for all values in integer list B
    - setcontains(\@A,$v)             is integer v in integer set A
    - setcontains(\@A,\@B)            is integer set B a subset of int set A
    - setcontainsany(\@A,\@B)         is any value in B in int set A
    - setbinop {...} \@A[,\@B]        apply op to cross product of set(s)
    - sumset(\@A[,\@B])               new set from a+b {a:A,b:B}
    - setunion(\@A,\@B)               union of two integer lists
    - setintersect(\@A,\@B)           intersection of two integer lists
    - setminus(\@A,\@B)               difference of two integer lists
    - setdelta(\@A,\@B)               symmetric difference of two int lists
    - is_sidon_set(\@L)               is integer list L a Sidon set
    - is_sumfree_set(\@L)             is integer list L a sum-free set
    - set_is_disjoint(\@A,\@B)        is set B disjoint from set A